# skeleton

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: continuous-integration.yml
cmake/: SkeletonCompilerWarnings.cmake  SkeletonConfig.cmake.in  SkeletonCxxStandard.cmake  SkeletonDefaultBuildType.cmake  SkeletonForceEnableAsserts.cmake  SkeletonOutputDirectories.cmake
docs/: CMakeLists.txt  main.dox
examples/: CMakeLists.txt
examples/src/: CMakeLists.txt  print_build_information.cpp
src/: CMakeLists.txt
src/skeleton/: SkeletonConfig.cmake.in  build_information.cpp  build_information.h  build_information.hpp  version.h.in  version.hpp
tests/: .clang-tidy  CMakeLists.txt
tests/benchmarks/: .clang-tidy  CMakeLists.txt  build_information.cpp
tests/fuzz_tests/: CMakeLists.txt  build_information.cpp  not_clang_main.cpp
tests/unit_tests/: CMakeLists.txt  build_information.cpp  build_information.test.cpp
tools/: generate_project.py  user_test.cmake
